@@ -11,8 +11,8 @@ public class CompressedImage
 	public int Height { get; set; }
 
 	public int Quality { get; set; }
-		
-	public Dictionary<BitsWithLength, byte> DecodeTable { get; set; }
+	
+	public HuffmanNode Huffman { get; set; }
 
 	public long BitsCount { get; set; }
 	public byte[] CompressedBytes { get; set; }
@@ -31,23 +31,8 @@ public class CompressedImage
 
 			buffer = BitConverter.GetBytes(Quality);
 			sw.Write(buffer, 0, buffer.Length);
-
-			buffer = BitConverter.GetBytes(DecodeTable.Count);
-			sw.Write(buffer, 0, buffer.Length);
-
-			foreach(var kvp in DecodeTable)
-			{
-				var bits = kvp.Key.Bits;
-				buffer = BitConverter.GetBytes(bits);
-				sw.Write(buffer, 0, buffer.Length);
-
-				var bitsCount = kvp.Key.BitsCount;
-				buffer = BitConverter.GetBytes(bitsCount);
-				sw.Write(buffer, 0, buffer.Length);
-
-				var mappedByte = kvp.Value;
-				sw.WriteByte(mappedByte);
-			}
+			
+			SaveHuffmanTree(Huffman, sw);
 
 			buffer = BitConverter.GetBytes(BitsCount);
 			sw.Write(buffer, 0, buffer.Length);
@@ -74,22 +59,8 @@ public class CompressedImage
 
 			sr.Read(buffer, 0, 4);
 			result.Quality = BitConverter.ToInt32(buffer, 0);
-
-			sr.Read(buffer, 0, 4);
-			var decodeTableSize = BitConverter.ToInt32(buffer, 0);
-			result.DecodeTable = new Dictionary<BitsWithLength, byte>(decodeTableSize);
-
-			for(int i = 0; i < decodeTableSize; i++)
-			{
-				sr.Read(buffer, 0, 4);
-				var bits = BitConverter.ToInt32(buffer, 0);
-
-				sr.Read(buffer, 0, 4);
-				var bitsCount = BitConverter.ToInt32(buffer, 0);
-
-				var mappedByte = (byte)sr.ReadByte();
-				result.DecodeTable[new BitsWithLength {Bits = bits, BitsCount = bitsCount}] = mappedByte;
-			}
+			
+			result.Huffman = LoadHuffmanTree(sr);
 
 			sr.Read(buffer, 0, 8);
 			result.BitsCount = BitConverter.ToInt64(buffer, 0);
@@ -103,5 +74,38 @@ public class CompressedImage
 				totalRead += sr.Read(result.CompressedBytes, totalRead, compressedBytesCount - totalRead);
 		}
 		return result;
+	}
+
+	private static void SaveHuffmanTree(HuffmanNode root, Stream stream)
+	{
+		if (root.LeafLabel.HasValue)
+		{
+			stream.WriteByte(1);
+			stream.WriteByte(root.LeafLabel.Value);
+		}
+		else
+		{
+			stream.WriteByte(0);
+			SaveHuffmanTree(root.Left, stream);
+			SaveHuffmanTree(root.Right, stream);
+		}
+	}
+
+	private static HuffmanNode LoadHuffmanTree(Stream stream)
+	{
+		var flag = stream.ReadByte();
+		var node = new HuffmanNode();
+		if (flag == 1)
+		{
+			var label = stream.ReadByte();
+			node.LeafLabel = (byte)label;
+		}
+		else
+		{
+			node.Left = LoadHuffmanTree(stream);
+			node.Right = LoadHuffmanTree(stream);
+		}
+    
+		return node;
 	}
 }
