@@ -65,4 +65,12 @@ NET 9
 |   Compress | 13.76 ms | 0.446 ms | 0.024 ms | 953.1250 | 953.1250 | 953.1250 |  26.83 MB |
 | Uncompress | 36.98 ms | 6.228 ms | 0.341 ms | 785.7143 | 785.7143 | 785.7143 |  25.79 MB |
 
+HuffmanNode Decode
+|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
+|   Compress | 14.32 ms | 4.453 ms | 0.244 ms | 953.1250 | 953.1250 | 953.1250 |  26.81 MB |
+| Uncompress | 11.47 ms | 0.118 ms | 0.006 ms | 953.1250 | 953.1250 | 953.1250 |  25.79 MB |
+
+
+
 
